Add result mock based parent integration test class ---------
Co-authored-by: Francois de Parscau <fdeparscau@talend.com>